--- a/client/src/estilos/detalle.css
+++ b/client/src/estilos/detalle.css
@@ -6,7 +6,8 @@
 .p{
     font-family: 'Arial', sans-serif;
     color:#FFFFFF;
-    font-size: 12px;
+    font-size: 10px;
+    text-align: left;
 }
 
 .img2{
@@ -44,12 +45,12 @@
     border-radius: 4px;
     background-color: #FFFFFF;
     ;
-    border: 3px solid #fa9779;
+    border: 1px solid #fa9779;
     color: #0f0f0f;
     text-align: center;
-    font-size: 12px;
-    padding: 15px;
-    margin: 25px;
+    font-size: 10px;
+    padding: 5px;
+    margin: 15px;
     width: 10;
     height: 10;
     transition: all 0.5s;
@@ -57,7 +58,7 @@
   }
 
   .button3:hover {
-    border: 3px solid #f4511e;
+    border: 1px solid #f4511e;
   }
 
   .ul{
