--- a/client/src/estilos/home.css
+++ b/client/src/estilos/home.css
@@ -1,27 +1,37 @@
 
-
+.divHo{
+  height:max-content;
+}
 .nav{
-    background-color: black;
+    background-color: #0f0f0f;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     top: 0;
     width: 100%;
+   
+}
+.alLado{
+  padding-left: 1%;
+  padding-top: 0.4%;
 }
 
 .select-css {
     display: flex;
-    font-size: 13px;
+    font-size: 10px;
     font-family: 'Arial', sans-serif;
     font-weight: 400;
     color: white;
     line-height: 1.3;
-    padding: .4em 1.4em .3em .8em;
-    width: 140px;
+    padding: 2%;
+    width: 100px;
     max-width: 100%; 
     box-sizing: border-box;
     margin: 0;
-    border: solid 1px #fa9779;
+    border-right: solid 1px #fa9779;
+    border-bottom: solid 1px #fa9779;
+    border-top: none;
+    border-left: none;
     box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
     -moz-appearance: none;
     -webkit-appearance: none;
@@ -45,6 +55,7 @@
    .select-css option {
     font-weight:normal;
     background-color: #0f0f0f;
+    
    }
    .select-css option:hover{
     background-color: #f4511e;
@@ -53,7 +64,11 @@
    div.contenedor{
     margin-top: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction:row;
     flex-wrap: wrap;
-    padding-top: 50px;
-}
+    padding-top: 20px; 
+    padding-left: auto;
+    padding-right: auto;
+    align-items: center;
+   }
+
