--- a/client/src/estilos/landingPage.css
+++ b/client/src/estilos/landingPage.css
@@ -7,7 +7,7 @@ body{
 }
 
 .div{
-    background-image: url(C:\Users\User\Desktop\proyecto-individual-Food\client\src\img\ingredientes-italianos-apetitosos-frescos-sabrosos-comida-fondo-oscuro-listo-cocinar-inicio-italiano-comida-saludable-concepto-cocina-viraje_1220-1820.webp);
+    background-color: aliceblue;
     display: inline-block;
     text-align: center;
     align-items: center; 
